k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        # github actions'ın push'ladığı imajı kullan. sha'yı en son commit'ten al.
        image: veritasacr.azurecr.io/veritas/analytics-service:2c8df27602feab707be988cab19aaa429778628f
