k8s/creator-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: creator-service
  template:
    metadata:
      labels:
        app: creator-service
    spec:
      containers:
      - name: creator-service
        # github actions'ın push'ladığı imajı kullan. sha'yı en son commit'ten al.
        image: veritasacr.azurecr.io/veritas/creator-service:2c8df27602feab707be988cab19aaa429778628f
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: creator-service
spec:
  selector:
    app: creator-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
