k8s/redirector-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirector-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirector-service
  template:
    metadata:
      labels:
        app: redirector-service
    spec:
      containers:
      - name: redirector-service
        # github actions'ın push'ladığı imajı kullan. sha'yı en son commit'ten al.
        image: veritasacr.azurecr.io/veritas/redirector-service:2c8df27602feab707be988cab19aaa429778628f
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: redirector-service
spec:
  selector:
    app: redirector-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8082
